--- a/src/app/shared/layout/main-layout/main-layout.scss
+++ b/src/app/shared/layout/main-layout/main-layout.scss
@@ -214,7 +214,7 @@
   flex: 1;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 12px 24px 40px 24px;
+  padding: 12px 28px 40px 28px;
   width: 100%;
 }
 
